Revision history for Template-Plugin-Lingua-EN-Inflect
======================================================

        - new maintainer: BARBIE.
        - change file dates changed to meet W3CDTF standards.
        - added LICENSE file.
        - updated META.yml, added META.json.

0.02    2005-10-21T08:04:19Z
	    - expanded documentation a bit

0.01    2005-09-01T15:38:02Z
	    - original version